--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,13 @@ PGHOST=
 PGDATABASE=
 PGPASSWORD=
 PGPORT=
+
+
+RABBITMQ_SERVER=
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+AWS_BUCKET_NAME=
+
+REDIS_SERVER=
