--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "joi": "^17.13.3",
+    "nodemailer": "^7.0.3",
     "pg": "^8.16.0",
     "redis": "^5.5.6",
     "uuid": "^11.1.0"
